Adjusted auth/auth0 route for login page. Updated dashboard show page with header

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Dashboard#show</h1>
-<%= session[:userinfo].inspect %>
+<h1>Black Self Care App</h1>
+<%# <%= session[:userinfo].inspect %> 
+
+
